# block-sparse-featurizer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
bsf/: __init__.py  base.py  grassmannian.py  group_lasso.py  train.py  vanilla.py  viz.py
starters/: MI_on_ESM.ipynb  MI_on_ESM_closer_look.ipynb  MI_on_ESM_structures.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb
